# drf-auth

./: .gitignore  Dockerfile  README.md  pyproject.toml
books/: models.py  serializer.py  urls.py  views.py
books/migrations/: 0001_initial.py
drf_auth/: settings.py  urls.py
